--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap');
 
 * {
     margin: 0;
@@ -6,12 +7,26 @@
     box-sizing: border-box;
 }
 body{
-  font-family: 'Playfair Display', serif;
+  font-family: 'Quicksand', sans-serif;
+ 
 }
 
 header {
-  margin: 50px auto;
+  margin: 0 auto;
   text-align: center;
+  background-color: rgba(235, 235, 235, 0.555);
+  padding: 50px 0;
+}
+
+
+.AppHeader h1 {
+  margin: 10px 0;
+  font-family: 'Playfair Display', serif;
+  text-shadow: 1px 1px 2px #777
+}
+
+.AppHeader p {
+  font-family: 'Quicksand', sans-serif;
 }
 
 .wrap {
@@ -24,13 +39,15 @@ header {
   margin: 20px;
 }
 
-label{
-  margin-right: 20px;
+.searchNumbersField input {
+  border: 1px solid rgba(119, 113, 145, 0.322);
+  border-radius: 40px;
+  box-shadow: 1px 1px 1px silver;
+  padding: 7px;
 }
 
-
-
-.showPhoneBook {
+label{
+  margin-right: 20px;
 }
 
 
@@ -38,19 +55,20 @@ label{
 
 ul li {
   list-style-type: none;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border: 1px solid rgba(36, 25, 87, 0.322);
-    border-radius: 40px;
-    margin: 10px 0;
-    padding: 5px 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid rgba(119, 113, 145, 0.322);
+  border-radius: 40px;
+  margin: 10px 0;
+  padding: 5px 15px;
+  background-color: white;
+  box-shadow: 1px 1px 1px silver;
 }
 
 .firstName{
   margin-right: 10px;
 }
-
 
 footer {
   position: fixed;
